# web_crawl_demo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
examples/: get_list.rs  use_stream.rs
res/: self_ref.html  simple.html
src/: blib.rs  crawl_domain.rs  crawl_stream.rs  crawler_api.rs  lib.rs  main.rs  tests.rs
src/crawler_api/: add_domain.rs  domains.rs  get_urls.rs
web_crawler/: Cargo.toml
web_crawler/examples/: get_list.rs  use_stream.rs
web_crawler/res/: link_node.html
web_crawler/src/: lib.rs  tests.rs
