[package]
name = "web_crawler_demo"
version = "0.1.0"
authors = ["Archibald Neil MacDonald <archibaldnmac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "^0.5.0"
reqwest = "^0.11.0"
futures = "0.3"
url = "^2.2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
mockito = "^0.29.0"

[[example]]
name = "use_stream"
crate-type = ["bin"]

[[example]]
name = "get_list"
crate-type = ["bin"]
