[package]
name = "web_crawler_server"
version = "0.1.0"
authors = ["Archibald Neil MacDonald <archibaldnmac@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
web_crawler_lib = { path = "web_crawler" }
warp = "0.3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
url = "^2.2.0"
reqwest = "^0.11.0"
futures = "0.3"